--- a/templates/display_list/index.html.twig
+++ b/templates/display_list/index.html.twig
@@ -3,43 +3,31 @@
 {% block title %}Test d'affichage{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Test {{ controller_name }}! ✅</h1>
+
+
 
     <table class="table">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Nom de l'établissement</th>
-            <th scope="col">Adresse</th>
-            <th scope="col">mail</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Ecole</td>
-            <td>adresse 1</td>
-            <td>mail 1</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Collège</td>
-            <td>adresse 2</td>
-            <td>mail 2</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Lycée</td>
-            <td>adresse 3</td>
-            <td>mail 3</td>
-        </tr>
-    </tbody>
+        <thead>
+            <tr>
+                <th scope="col">Nom de l'établissement</th>
+                <th scope="col">Type</th>
+                <th scope="col">Public/Privé</th>
+                <th scope="col">Adresse</th>
+                <th scope="col">Code postal</th>
+                <th scope="col">Email</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td scope="row">{{ data.records.0.record.fields.nom_etablissement }}</th>
+                <td>{{ data.records.0.record.fields.type_etablissement }}</td>
+                <td>{{ data.records.0.record.fields.statut_public_prive }}</td>
+                <td>{{ data.records.0.record.fields.adresse_1 }}</td>
+                <td>{{ data.records.0.record.fields.code_postal }}</td>
+                <td>{{ data.records.0.record.fields.mail }}</td>
+            </tr>
+         
+        </tbody>
     </table>
-</div>
 {% endblock %}
