--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,59 @@
-<!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+    <link rel="stylesheet" href="{{ asset('asset/css/style.css') }}">
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <title>{% block title %}Mini Projet{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+        <style>
+         img{
+         max-width: 100%;
+         max-height: 100%;
+         }
+        </style>
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <header>
+            <div id="menu">
+                  <div class="container">
+                    <nav class="navbar navbar-expand-lg bg-light">
+                      <div class="container-fluid">        
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                              <a class="nav-link active" aria-current="page" href="{{ path('app_home') }}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link active" href="{{ path('app_user') }}">Inscription</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+                            </li>
+                          </ul>
+                          <form class="d-flex" role="search">
+                            <button class="btn btn-outline-warning" type="submit">Déconnexion</button>
+                          </form>
+                        </div>
+                      </div>
+                    </nav>  
+                  </div>  
+            </div>  
+        </header>
+        {% block body %}{% endblock %} 
+        <footer class="fixed-bottom">
+            <div class="container"><span class="copyright">© 2022 Copyright</span><span class="contact"><a href="#">Contact</span></div>
+        </footer>              
     </body>
 </html>
