--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,6 +46,9 @@
                             <li class="nav-item">
                               <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
                             </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="/display/liste">Affichage</a>
+                            </li>
                           </ul>
                           <form class="d-flex" role="search">
                             <button class="btn btn-outline-warning" type="submit">Déconnexion</button>
