--- a/templates/display_list/index.html.twig
+++ b/templates/display_list/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Test d'affichage{% endblock %}
+{% block title %}Liste des établissements{% endblock %}
 
 {% block body %}
 
